# djbdns

./: ChangeLog  Makefile.am  Makefile.in  README  alloc.c  axfrdns-conf.c  axfrdns.c  buffer_put.c  cache.c  changelog.ms  common.c  common.h  config.h.in  configure  configure.ac  dd.c  djbdns.sh  dns.h  dns_dfd.c  dns_domain.c  dns_random.c  dns_transmit.c  dnscache-conf.c  dnscache.c  dnscache.ms  dnscache.sh  dnsfilter.c  dnsfilter.ms  dnsip.c  dnsip.ms  dnsipq.c  dnsmx.c  dnsname.c  dnsq.c  dnsq.ms  dnsqr.c  dnstrace.c  dnstxt.c  droproot.c  error.h  (+27 more)
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
etc/: Makefile.am  Makefile.in  dnscache-conf  tinydns-conf
etc/ip/: Makefile.in
etc/servers/: Makefile.am  Makefile.in
